--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,12 @@ project(transmission_networks)
 
 add_subdirectory(core)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES
+        main.cpp
+        )
 
-include_directories(${PROJECT_BINARY_DIR})
 
 add_executable(transmission_networks ${SOURCE_FILES})
 target_link_libraries(transmission_networks transmission_network_core)
+
 install(TARGETS transmission_networks DESTINATION ${TRANSMISSION_NETWORKS_INSTALL_BIN_DIR})
