--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,21 @@
 cmake_minimum_required(VERSION 3.15)
 project(transmission_networks)
 
-add_subdirectory(core)
+find_package(Boost 1.72 REQUIRED container math_c99l)
+find_package(Eigen3 REQUIRED)
+find_package(GSL REQUIRED)
+
 
 set(SOURCE_FILES
-        main.cpp
+        core/computation/PartialLikelihood.cpp
+        core/computation/LogLikelihood.cpp
+        core/containers/Locus.cpp
+        core/utils/CombinationIndicesGenerator.cpp
+        model/observation_process/AlleleCounts.cpp
         )
 
 
-add_executable(transmission_networks ${SOURCE_FILES})
-target_link_libraries(transmission_networks transmission_network_core)
+add_library(transmission_networks SHARED STATIC ${SOURCE_FILES})
+#target_link_libraries(transmission_networks transmission_network_model)
 
 install(TARGETS transmission_networks DESTINATION ${TRANSMISSION_NETWORKS_INSTALL_BIN_DIR})
