--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,13 +48,16 @@ set(SOURCE_FILES
         src/core/samplers/ContinuousRandomWalkTest.cpp
         src/core/samplers/ConstrainedContinuousRandomWalkTest.cpp
         src/core/samplers/SALTSamplerTest.cpp
+        src/core/samplers/OrderSamplerTest.cpp
+        src/core/samplers/DiscreteRandomWalkTest.cpp
+        src/core/samplers/ConstrainedDiscreteRandomWalkTest.cpp
         src/core/utils/CombinationIndicesGeneratorTests.cpp
         src/model/transmission_process/OrderDerivedParentSetTest.cpp
         src/model/transmission_process/OrderBasedTransmissionProcessTest.cpp
         src/model/transmission_process/source_transmission_process/GeometricCOIProbabilityTest.cpp
         src/model/transmission_process/source_transmission_process/MultinomialSourceTransmissionProcessTest.cpp
         src/model/transmission_process/node_transmission_process/GeometricGenerationProbabilityTest.cpp
-        src/core/samplers/OrderSamplerTest.cpp src/core/samplers/DiscreteRandomWalkTest.cpp)
+        )
 
 add_executable(transmission_networks_tests ${SOURCE_FILES})
 target_link_libraries(transmission_networks_tests transmission_networks gtest)
