Change simplex implementation to dynamic vector

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SOURCE_FILES
         core/containers/Locus.cpp
         core/utils/CombinationIndicesGenerator.cpp
         model/observation_process/AlleleCounts.cpp
-        core/samplers/ConstrainedDiscreteRandomWalk.h core/samplers/genetics/RandomAllelesBitSetSampler.h)
+        core/samplers/ConstrainedDiscreteRandomWalk.h core/samplers/genetics/RandomAllelesBitSetSampler.h core/utils/random_sequence.h core/datatypes/Simplex.cpp)
 
 
 add_library(transmission_networks SHARED STATIC ${SOURCE_FILES})
