--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,10 @@ set(CMAKE_CXX_STANDARD 17)
 #if ( CMAKE_COMPILER_IS_GNUCC )
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -Werror -pedantic-errors")
+#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -Werror -pedantic-errors")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -pedantic-errors")
 #endif()
+
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 
