--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.15)
 project(transmission_networks)
 
 
-find_package(Boost 1.72 REQUIRED container math_c99l random)
+find_package(Boost 1.72 REQUIRED container math_c99l random filesystem)
 find_package(Eigen3 REQUIRED)
+find_package(nlohmann_json 3.2.0 REQUIRED)
 
 include_directories(SYSTEM ${Boost_INCLUDE_DIR})
 
@@ -33,10 +34,12 @@ set(SOURCE_FILES
         core/computation/Transformers/LogTransformer.h
         core/utils/CombinationsWithRepetitionsGenerator.cpp
         core/utils/CombinationsWithRepetitionsGenerator.h
-        core/priors/Prior.h)
+        core/priors/Prior.h
+        core/utils/io/parse_json.h core/utils/io/Loggers/AbstractLogger.h core/utils/io/Loggers/ValueLogger.h core/utils/io/serialize.h core/utils/io/Loggers/AbstractLogger.cpp core/samplers/RandomizedScheduler.h core/utils/io/path_parsing.cpp core/utils/io/path_parsing.h model/transmission_process/node_transmission_process/NoSuperInfectionMutation.h model/transmission_process/GraphBasedTransmissionProcess.h impl/state/ModelTwoState.cpp impl/state/ModelTwoState.h impl/model/ModelTwo.cpp impl/model/ModelTwo.h core/distributions/ZTPoisson.h)
 
 
 add_library(transmission_networks SHARED STATIC ${SOURCE_FILES})
+target_link_libraries(transmission_networks PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(transmission_networks)
 
 #target_link_libraries(transmission_networks transmission_network_model)
