--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 #if ( CMAKE_COMPILER_IS_GNUCC )
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 #set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -Werror -pedantic-errors")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -pedantic-errors")
+#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ffast-math -pedantic-errors")
+set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -pedantic-errors")
 #endif()
 
 
