--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,6 +4,8 @@ project(transmission_network_core)
 find_package(Boost 1.72 REQUIRED container math_c99l random filesystem)
 find_package(Eigen3 REQUIRED)
 find_package(GSL REQUIRED)
+find_package(nlohmann_json 3.2.0 REQUIRED)
+
 
 set(SOURCE_FILES
         computation/PartialLikelihood.cpp
