--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,7 +58,7 @@ set(SOURCE_FILES
         src/model/transmission_process/source_transmission_process/MultinomialSourceTransmissionProcessTest.cpp
         src/core/distributions/GeometricTest.cpp
         src/core/samplers/genetics/RandomAllelesBitSetSamplerTest.cpp
-        src/core/utils/RandomSequenceTests.cpp src/model/observation_process/ObservationProcessTest.cpp src/impl/ModelOneTest.cpp src/core/distributions/ZTMultiplicativeBinomialTest.cpp src/core/utils/CombinationsWithRepetitionsGeneratorTest.cpp src/core/utils/ParseJSONTests.cpp src/impl/ModelTwoTest.cpp src/model/transmission_process/NetworkBasedTransmissionProcessTest.cpp src/core/containers/TransmissionNetworkTest.cpp src/impl/ModelThreeTest.cpp)
+        src/core/utils/RandomSequenceTests.cpp src/model/observation_process/ObservationProcessTest.cpp src/impl/ModelOneTest.cpp src/core/distributions/ZTMultiplicativeBinomialTest.cpp src/core/utils/CombinationsWithRepetitionsGeneratorTest.cpp src/core/utils/ParseJSONTests.cpp src/impl/ModelTwoTest.cpp src/model/transmission_process/NetworkBasedTransmissionProcessTest.cpp src/core/containers/TransmissionNetworkTest.cpp src/impl/ModelThreeTest.cpp src/core/utils/ProbAnyMissingTests.cpp)
 
 add_executable(transmission_networks_tests ${SOURCE_FILES})
 target_link_libraries(transmission_networks_tests
