randomized weighted scheduling, starting to implement chain structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,13 @@ if ( CMAKE_COMPILER_IS_GNUCC )
 #set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -pedantic-errors")
 endif()
 
-#if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-#    message("Compiling Clang")
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mlinker-version=305 -Wall -Wextra")
-#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g -Werror -pedantic-errors")
-#    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Ofast -march=native -ffast-math -Werror -pedantic-errors")
-#endif()
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    message("Compiling Clang")
+    set(Clang_DIR "/usr/local/opt/llvm/lib/cmake/clang")
+    find_package(Clang)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g -Werror -pedantic-errors")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Ofast -march=native -ffast-math -Werror -pedantic-errors")
+endif()
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 
