implement induced ordering by infection duration
- fixed SALT sampler bugs
- moved some stuff around

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,11 +27,11 @@ set(SOURCE_FILES
         core/computation/PartialLikelihood.cpp
         core/computation/LogLikelihood.cpp
         core/containers/Locus.cpp
-        core/utils/CombinationIndicesGenerator.cpp
+        core/utils/generators/CombinationIndicesGenerator.cpp
         model/observation_process/AlleleCounts.cpp
         core/samplers/general/ConstrainedDiscreteRandomWalk.h
         core/samplers/genetics/RandomAllelesBitSetSampler.h
-        core/utils/RandomSequence.h
+        core/utils/generators/RandomSequence.h
         core/datatypes/Simplex.cpp
         core/samplers/Scheduler.cpp
         core/samplers/Scheduler.h
@@ -41,8 +41,8 @@ set(SOURCE_FILES
         impl/model/ModelOne.h
         core/computation/Transformers/Transformer.h
         core/computation/Transformers/LogTransformer.h
-        core/utils/CombinationsWithRepetitionsGenerator.cpp
-        core/utils/CombinationsWithRepetitionsGenerator.h
+        core/utils/generators/CombinationsWithRepetitionsGenerator.cpp
+        core/utils/generators/CombinationsWithRepetitionsGenerator.h
         core/priors/Prior.h
         core/io/parse_json.h
         core/io/loggers/FileOutput.h
@@ -83,7 +83,13 @@ set(SOURCE_FILES
         core/io/loggers/ParentSetDistLogger.h
         impl/model/ModelFour.cpp
         impl/model/ModelFour.h
-        core/io/loggers/AbstractLogger.h core/io/loggers/AbstractOutput.h model/OrderingLikelihood.h)
+        core/io/loggers/AbstractLogger.h
+        core/io/loggers/AbstractOutput.h
+        model/OrderingLikelihood.h
+        core/computation/ObservationTimeDerivedOrdering.h
+        impl/model/ModelFive.cpp impl/model/ModelFive.h
+        core/utils/LogPQ.cpp
+        core/utils/LogPQ.h core/io/loggers/MultiValueLogger.h)
 
 
 add_library(transmission_networks SHARED STATIC ${SOURCE_FILES})
